# gureum

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  COPYING  Gureum.entitlements  HACKING.md  Makefile  Podfile  README.md  _clang-format  todo.list
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
CharmIM/: CIMAppDelegate.h  CIMAppDelegate.m  CIMCommon.h  CIMComposer.h  CIMComposer.m  CIMConfiguration.h  CIMConfiguration.m  CIMHangulComposer.h  CIMHangulComposer.m  CIMInputController.h  CIMInputController.m  CIMInputHandler.h  CIMInputHandler.m  CIMInputManager.h  CIMInputManager.m  CharmAppDelegate.h  CharmAppDelegate.m  HGCharacter.h  HGCharacter.m  HGInputContext.h  HGInputContext.m  Info.plist  MainMenu.xib  Prefix.pch  main.m
CharmIM.xcodeproj/: project.pbxproj
CharmIMTests/: CIMTestEnvironment.h  CIMTestEnvironment.m  CharmIMTests-Prefix.pch  CharmIMTests.h  CharmIMTests.m
CommonInputMethod/: CIMApplicationDelegate.h  CIMApplicationDelegate.swift  CIMBaseComposer.swift  CIMCommon.h  CIMCommon.m  CIMComposer.h  CIMComposer.m  CIMComposer.swift  CIMConfiguration.h  CIMConfiguration.m  CIMInputController.h  CIMInputController.m  CIMInputController.swift  CIMInputHandler.h  CIMInputHandler.m  CIMInputManager.h  CIMInputManager.m  CIMInputManager.swift  CIMInputReceiver.swift  TISInputSource.h  TISInputSource.m
Gureum.xcodeproj/: project.pbxproj
GureumKIM/: .gitignore  CIMInputControllerGureum.m  GureumAppDelegate.h  GureumAppDelegate.m  GureumComposer.h  GureumComposer.m  GureumInputController.h  GureumInputController.m  GureumInputManager.h  GureumInputManager.m  GureumKIMAppDelegate.h  GureumKIMAppDelegate.m  GureumPreferencesWindowController.h  GureumPreferencesWindowController.m  Hangul.strings  HangulComposer.h  HangulComposer.m  Info.plist  MainMenu.xib  Prefix.pch  preferences.xib
GureumOSX/: CIMInputControllerGureum.h  CIMInputControllerGureum.m  GureumAppDelegate.m  GureumComposer.m  GureumPreferencesWindowController.h  GureumPreferencesWindowController.m  Hangul.strings  Info.plist  Prefix.pch  preferences.xib
GureumTests/: Bridge.h  GureumMockObjects.h  GureumMockObjects.m  GureumObjCTests.m  GureumTests-Prefix.pch  GureumTests.h  GureumTests.m  GureumTests.swift  MockApp.swift  MockInputClient.h  MockInputClient.m
Hangul/: HGCharacter.h  HGCharacter.m  (+4 more)
libhangul/: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  libhangul.pc.in
libhangul/bindings/: Makefile.am
libhangul/bindings/python/: Makefile  pyhangul.c  setup.py  test_pyhangul.py
libhangul/bindings/python_swig/: Makefile  hangul.i  test_hangul.py  test_hanja.py  valgrind-test.sh
libhangul/bindings/ruby/: extconf.rb  hangul.c  test-hangul.rb
libhangul/data/: Makefile.am
libhangul/data/hanja/: Makefile.am  freq-hanja.txt  merge.py
libhangul/doc/: Doxyfile.in  Makefile  mainpage.dox
libhangul/hangul/: Makefile.am  hangul-gettext.h  hangul.h  hangulctype.c  hangulinputcontext.c  hangulinternals.h  hangulkeyboard.h  hanja.c  hanjacompatible.h
libhangul/po/: Makevars  POTFILES.in  ko.po
libhangul/test/: Makefile.am  hangul.c  hanja.c  test.c
libhangul/tools/: Makefile.am  hangul.c  hanjac.c
(+320 files in other folders)
